# S-Curve-Model

./: AGORA LYCOS S-Curve Model Charter.docx  Developing an S‑Curve Stock‑Screening Model in Python.docx  How to run the S-Curve model  README.md  S-Curve Model Process Chart.docx  S-Curve Python Blueprint.txt  SP500-listed-stocks.csv  __init__.py  bass.py  composite.py  config.py  construct.py  cost.py  diagnostics.py  drift.py  fallback.py  filterstemplate.py  fitters.py  fundamentals.py  gates.py  gompertz.py  logging.py  logistics.py  market.py  metrics.py  nasdaq-listed-symbols.csv  nasdaq_master.csv  pit.py  post_fit.py  pre_fit.py  pref_fit.py  pyproject.toml  research_scurve.py  revisions.py  risk.py  run.py  run_fast.ps1  scurve_config.yaml  scurve_config_fast.yaml  sp500_master.csv  (+10 more)
