[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scurve"
version = "0.1.0"
description = "Deterministic S-Curve lifecycle modeling framework (Gompertz, Bass, scoring, portfolio, reporting)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
    { name = "Agora Lycos Trading Lab" }
]
keywords = [
    "quant",
    "s-curve",
    "gompertz",
    "bass diffusion",
    "portfolio construction",
    "systematic trading"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "yfinance>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0"
]

[tool.setuptools.packages.find]
include = ["scurve*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
